@@ -13,6 +13,7 @@ Patches and other contributions from:
     Jim Meyering <jim@meyering.net>
     Mihai Ibanescu <mihai.ibanescu@gmail.com>
     Tru Huynh <tru@pasteur.fr>
+    Perry Myers <pmyers@redhat.com>
     Adam Rosenwald <thestrider@gmail.com>
     Scott Seago <sseago@redhat.com>
 
