@@ -199,7 +199,7 @@ on your network will result in faster, more up-to-date installations and faster 
 are only provisioning a home setup, this will probably be overkill, though it can be very useful
 for larger setups (labs, datacenters, etc).
 
-B<cobbler repo add --mirror=url --name=string [--local-filename=string]>
+B<cobbler repo add --mirror=url --name=string [--local-filename=string] [--rpmlist=list] [--creatrepo-flags=string]>
 
 =over
 
@@ -257,6 +257,11 @@ games.  To do this, use --rpm-list="cobbler koan".
 
 This option only works for http:// and ftp:// repositories.  It will be ignored for other
 mirror types, such as local paths and rsync:// mirrors.
+
+=item createrepo-flags
+
+Specifies optional flags to feed into the createrepo tool, which is called when "cobbler reposync" is run for the
+given repository.  The defaults are '-c cache'.
 
 =back
 
